# office-tools-skills

./: .gitignore  SKILL.md  pyproject.toml
references/: CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  office-tools.md
scripts/: check_env.py  check_env.sh  install.sh  office-tools-launcher  replace_tool.py
